@@ -50,18 +50,6 @@
 
 ;; Define compiler macros for the functions provided by cl in old Emacsen.
 (unless (featurep 'xemacs)
-  (define-compiler-macro assq-delete-all (&whole form key alist)
-    (if (>= emacs-major-version 21)
-	form
-      `(let* ((key ,key)
-	      (alist ,alist)
-	      (tail alist))
-	 (while tail
-	   (if (and (consp (car tail)) (eq (car (car tail)) key))
-	       (setq alist (delq (car tail) alist)))
-	   (setq tail (cdr tail)))
-	 alist)))
-
   (define-compiler-macro butlast (&whole form x &optional n)
     (if (>= emacs-major-version 21)
 	form
