@@ -1,3 +1,7 @@
+2003-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* dgnushack.el (assq-delete-all): Removed the compiler macro.
+
 2003-05-14  Kevin Greiner <kgreiner@xpediantsolutions.com>
 
 	* gnus-agent.el (gnus-agentize): Updated documentation to match
